# fastcampus-ai-agent-vibecoding

./: .gitignore  README.md  SUMMARY.md  add_header_footer.py  pyproject.toml  readme_table.md  wt
.claude/agents/: lecture-content-generator.md  subway-menu-recommender.md
.claude/commands/: create-linear-issues.md
.claude/hooks/: youtube_transcript.sh
.claude/output-styles/: one-word.md
Part1_AI_에이전트와_Claude_Code_기초/Chapter1_강의_소개/: Clip1_강의를_통해_얻어갈_수_있는_것.md  Clip2_CLI기반_Claude_Code와_Codex로_할_수_있는_것.md
Part1_AI_에이전트와_Claude_Code_기초/Chapter3_커스터마이징_기초/: Clip1_Slash_Command_만들기.md
Part1_AI_에이전트와_Claude_Code_기초/Chapter4_Slack_MCP_서버_실습/: Clip2_슬래시_커맨드를_자동으로_업데이트하기.md  README.md
Part2_Agent_개념과_아키텍처/Chapter1_Agent_개념_이해하기/: Clip2_AI_Agent_architecture_자세히_살펴보기.md
Part2_Agent_개념과_아키텍처/Chapter2_LLM_API_호출_이해하기/: Clip1_LLM_API_이해하고_호출해보기.md  Clip2_세부_파라미터_이해하기.md  README.md
Part2_Agent_개념과_아키텍처/Chapter3_MCP_Client_사용하기/: Clip1_Claude_Code_등_에이전트가_어떻게_MCP를_활용하는지_보기.md  Clip3_Tool_이해하기.md  Clip4_MCP_Client_개념_이해하기.md  README.md
Part2_Agent_개념과_아키텍처/Chapter4_바이브코딩으로_MCP_AI_에이전트_만들기/: Clip2_MCP_Client_구현하기.md  README.md
Part2_Agent_개념과_아키텍처/Chapter4_바이브코딩으로_MCP_AI_에이전트_만들기/playwright-mcp-client/: pyproject.toml  test_tools.py
Part2_Agent_개념과_아키텍처/Chapter4_바이브코딩으로_MCP_AI_에이전트_만들기/playwright-mcp-client/src/playwright_mcp_client/: __main__.py  agent.py  client.py
Part2_Agent_개념과_아키텍처/Chapter4_바이브코딩으로_MCP_AI_에이전트_만들기/playwright-mcp-client/tests/: test_agent.py  test_client.py
Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/Chapter1_실습_Postgresql_기반_Hybrid_Search_구현하기/: Clip1_Vector_Search_이해하기.md  Clip2_BM25_이해하기.md  Clip4_Hybrid_Search_구현하기.md
Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/Chapter2_실습_Langgraph_기반_workflow_RAG_구현하기/: Clip1_RAG_개념_이해하기.md
Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/search_app/: .gitignore  BM25_ISSUE_REPORT.md  CLAUDE.md  hybrid_search.py  langgraph_rag.py  test_model_config.py
Part4_바이브코딩으로_MCP_server_구현하기/Chapter2_바이브코딩으로_MCP_server_구현하기/: .mcp.json  README.md
Part4_바이브코딩으로_MCP_server_구현하기/Chapter2_바이브코딩으로_MCP_server_구현하기/calculate-mcp-server/: pyproject.toml
Part4_바이브코딩으로_MCP_server_구현하기/Chapter3_우리_회사_DB를_쿼리하는_MCP_SERVER_구현하기/: Clip3_DB_Write_Tool_설계하기.md
Part5_AI_Agent_프로젝트_3개/Chapter1_바이브코딩으로_CS_슬랙봇_구현하기/: .env.example  .mcp.json  CLAUDE.md  DEPLOYMENT.md  PHASE2_COMPLETION.md  PLAN.md  PRD.md  claude_service.py  main.py  mcp_client.py  system_prompt_analysis.md  test_claude_notion_integration.py  test_mcp_content_extraction.py  test_mcp_direct.py  test_with_curl.sh
Part5_AI_Agent_프로젝트_3개/Chapter2_바이브코딩으로_서울시_문화행사_조회하는_MCP_SERVER_만들기/: .env.example  fastmcp-llms-full.txt  run_server.py  test_api.py
Part5_AI_Agent_프로젝트_3개/Chapter3_바이브코딩으로_공공_MCP_자동_생성하고_에이전트_연결하기/: Cookiecutter_Management_Analysis.md
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/: .mcp.json  SUMMARY.md  pyproject.toml
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/Part4_바이브코딩으로_MCP_server_구현하기/Chapter2_바이브코딩으로_MCP_server_구현하기/random-mcp-server/: README.md  pyproject.toml
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/Part4_바이브코딩으로_MCP_server_구현하기/Chapter3_우리_회사_DB를_쿼리하는_mcp_server_구현하기/recruit-mcp-server/: pyproject.toml  server.py
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/Part5_AI_Agent_프로젝트_3개/Chapter2_바이브코딩으로_서울시_문화행사_조회하는_MCP_SERVER_만들기/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  서울시+문화행사+정보.xls
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/Part5_AI_Agent_프로젝트_3개/Chapter3_바이브코딩으로_공공_MCP_자동_생성하고_에이전트_연결하기/culturalevents-mcp-server/: CHANGELOG.md  pyproject.toml
Part5_AI_Agent_프로젝트_3개/worktree-cultural-reservation/Part5_AI_Agent_프로젝트_3개/Chapter3_바이브코딩으로_공공_MCP_자동_생성하고_에이전트_연결하기/culturalevents-mcp-server/tests/: __init__.py  conftest.py  test_main.py
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/: README.md  WT_SCRIPT_GUIDE.md
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/search_app/: .env.example  README.md  load_data.py  pyproject.toml
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/search_app/agent_app/: README.md  test_stream_directly.py
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/Part3_바이브코딩으로_Hybrid_Search_RAG_구현하기/search_app/agent_app/api/: index.py
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/Part5_AI_Agent_프로젝트_3개/Chapter1_바이브코딩으로_CS_슬랙봇_구현하기/: .gitignore  Dockerfile  README.md  config.py  deploy.sh  pyproject.toml  test_slack_event.py
Part5_AI_Agent_프로젝트_3개/worktree-women-family-foundation/Part5_AI_Agent_프로젝트_3개/Chapter1_바이브코딩으로_CS_슬랙봇_구현하기/tests/: __init__.py  test_main.py
Part6_바이브코딩과_AI_agent_best_practice/Chapter1_Best_practice/: Clip1_best_practice_찾아서_이해하기.md  Clip1_발표_스크립트.md  Clip2_바이브코딩_팁을_자동화시키기.md
Part6_바이브코딩과_AI_agent_best_practice/Chapter2_바이브코딩을_위한_Context_Prompt_Engineering/: Clip1_Context_Prompt_Engineering_이해하기.md  Clip1_발표_스크립트.md  Clip2_AI의_PM이_되기.md  Clip2_발표_스크립트.md  README.md
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/: CLAUDE.md  CONTRIBUTING.md  MSDS_API_명세서.md  README.md  TEMPLATE_USAGE.md  deploy_nps.sh  pyproject.toml
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/.claude/commands/: add-mcp-server.md
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/.claude/subagents/: add-mcp-server.md
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/docs/: creating-new-mcp-server.md  step-by-step-example.md
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/scripts/: create_mcp_server.py  deploy_to_pypi.py
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/template/: cookiecutter.json
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/template/hooks/: post_gen_project.py
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/template/{{cookiecutter.api_name}}/: CHANGELOG.md  README.md  pyproject.toml
Part6_바이브코딩과_AI_agent_best_practice/data-go-mcp-servers/template/{{cookiecutter.api_name}}/data_go_mcp/{{cookiecutter.api_name_underscore}}/: __init__.py  api_client.py  models.py  server.py
(+186 files in other folders)
