[project]
name = "data-seoul-mcp.culturalevents-mcp-server"
version = "0.0.0"
description = "A Seoul Data MCP server for 서울시 문화행사 정보 (Seoul Cultural Events)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

authors = [
    {name = "Seoul Data Team", email = "team@seoul-data.kr"},
]

dependencies = [
    "loguru>=0.7.0",
    "mcp[cli]>=1.6.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.10.6",
    "httpx>=0.27.0",
]

[project.scripts]
"data-seoul-mcp.culturalevents-mcp-server" = "data_seoul_mcp.culturalevents_mcp_server.server:main"

[dependency-groups]
dev = [
    "commitizen>=4.2.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "pyright>=1.1.398",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_seoul_mcp"]

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [".venv", "**/__pycache__", "**/dist", "**/build"]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pyright]
include = ["data_seoul_mcp"]
exclude = ["**/__pycache__", "**/dist", "**/build"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["data_seoul_mcp"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "data_seoul_mcp/culturalevents_mcp_server/__init__.py:__version__"
]
update_changelog_on_bump = true
